# AgentsExperiments

./: .env  .gitignore  Dockerfile.tensorflow-api  Dockerfile.tensorflow-cli  README.md  pyproject.toml
notebooks/: exploration.ipynb
src/agexp/: api.py
src/agexp/keydoor/: agent.py  env.py  language_model.py  llm_prompt.txt  llm_tool_prompt.txt  main.py  structures.py  tools.py
tests/: test_train.py
tests/agexp/keydoor/: test_env.py
