[tool.poetry]
name = "agexp"
version = "0.1.0"
description = "Experiments with AI Agents"
authors = ["David E. Weirich <weirich.david@gmail.com>"]
packages = [{ include = "agexp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.21"
ipython = "^9.1"
click = "^8.1.8"
dotenv = "^0.9.9"
openai = "^1.74.0"
rich = "^14.0.0"

[tool.poetry.scripts]
keydoor = "agexp.keydoor.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
jupyter = "^1.0"
pre-commit = "^3.7"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning"
]
addopts="--pdbcls=IPython.terminal.debugger:TerminalPdb"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
